# template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/: components.py  main.py  pages.py
{{ cookiecutter.project_slug }}/src/endpoints/: errors.py  index.py
{{ cookiecutter.project_slug }}/tests/: test_homepage.py
