[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"
]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ludic = { extras = ["full"], version = "^0.5.0" }
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false
plugins = "ludic.mypy_plugin"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git docs .pytest_cache .mypy_cache .ruff_cache"
filterwarnings = [
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]
